--- a/index.html
+++ b/index.html
@@ -3,34 +3,53 @@
 <head>
     <meta charset="utf-8">
     <title>Neighborhood Map</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- loading jquery -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+    <!-- Loading Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <!-- jquery part for autocomplete-->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
+    <!-- Loading knockoutjs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
-    <style type="text/css">
+
+    <!-- Loading Google Maps -->
+    <!-- <style type="text/css">
         html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-    </style>
+    </style> -->
     <script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDREVIZuNleXILHf47t3Iw2fwiKUVDEvdo">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDREVIZuNleXILHf47t3Iw2fwiKUVDEvdo">
     </script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <article></article>
-
-    <input type="text" id="searchMarkers">
-    <!-- VIEW / Using knockout to display markers list -->
-    <h2>Markers</h2>
-    <ul data-bind="foreach: markers">
-        <li data-bind="text: label, click: $parent.centerMap"></li>
-    </ul>
-
-    <!-- Display map -->
-    <div id="map-canvas"></div>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 form-group header">
+                <label for="searchMarkers">Search a place: </label>
+                <input type="text" class="form-control" id="searchMarkers" data-bin="value: label, valueUpdate: 'keyup'">
+            </div>
+            <div class="col-md-12 marker-list">
+                <!-- VIEW / Using knockout to display markers list -->
+                <h4>Markers List</h4>
+                <ul data-bind="foreach: markers">
+                    <li data-bind="text: label, click: $parent.centerMap"></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row map-container">
+            <!-- Display map -->
+            <div id="map-canvas"></div>
+        </div>
+        <article></article>
+    </div>
     <!-- map/view script -->
     <script src="js/map.js"></script>
 </body>
